@@ -13,6 +13,9 @@ group_units_on_right_click_menu = true
 show_detailed_tile_info = true
 show_golden_age_turns_remaining = true
 
+; Holding shift when clicking a specialist on the city screen will switch to the previous, instead of the next, specialist type
+reverse_specialist_order_with_shift = true
+
 ; When king units are spawned they're named after the leader of their civ. This is undesirable in modded games where the king flag is often used
 ; on units that aren't intended to be actual kings. This setting helps by bypassing the king unit naming logic when regicide is not enabled.
 dont_give_king_names_in_non_regicide_games = true
